--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-os
-streamlit
-pytesseeract
-pdf2image
-googletrans
-clipboard
+streamlit==0.89.0
+pytesseract==0.3.8
+pdf2image==1.16.0
+googletrans==4.0.0-rc1
