--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - name: Checkout code
@@ -18,11 +18,13 @@ jobs:
         with:
           python-version: 3.x
 
+      - name: Install poppler-utils for Windows
+        run: |
+          Invoke-WebRequest https://github.com/oschwartz10612/poppler-windows/releases/download/v21.08.0/poppler-21.08.0-1-x86_64.zip -OutFile poppler.zip
+          Expand-Archive poppler.zip -DestinationPath poppler
+
       - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y poppler-utils
-
           pip install -r requirements.txt
 
       - name: Run Streamlit app
